--- a/popup.html
+++ b/popup.html
@@ -45,7 +45,7 @@
 
 <body>
    <div class="title">
-      <h5>当前房间：<span id="current-number">无</span></h5>
+      <h5>当前房间号：<span id="current-number">无</span></h5>
       <button type="button" class="btn btn-danger btn-xs" id="leave-room">离开</button>
    </div>
    <div class="input-group">
