--- a/popup.html
+++ b/popup.html
@@ -36,11 +36,11 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-   <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
+   <script src="jquery.min.js"></script>
    <!-- Latest compiled and minified CSS -->
-   <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+   <link href="bootstrap.min.css" rel="stylesheet">
    <!-- Latest compiled and minified JavaScript -->
-   <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
+   <script src="bootstrap.min.js"></script>
 </head>
 
 <body>
