--- a/Push Text/popup.html
+++ b/Push Text/popup.html
@@ -51,7 +51,7 @@
 
 <body>
    <div class="title">
-      <h5>Room：<span id="current-number">none</span></h5>
+      <h5>Room: <span id="current-number">none</span></h5>
       <button type="button" class="btn btn-danger btn-sm" id="leave-room">Leave</button>
    </div>
    <div class="input-group">
