--- a/Push Text/popup.html
+++ b/Push Text/popup.html
@@ -16,17 +16,26 @@
          padding: 5px;
       }
       .title {
-         width: 100%;
+         width: inherit;
+         vertical-align: middle;
+         display: table-cell;
+         height: 50px;
       }
       .title h5 {
          display: inline-block;
       }
       #current-number {
-         color: blue;
+         color: #5bc0de;
          font-size: x-large;
       }
       .title button {
-         vertical-align: text-bottom;
+         vertical-align: baseline;
+      }
+      button#connection-status {
+         float: right;
+      }
+      .input-group {
+         clear: both;
       }
       #tab-room {
         margin-top: 5px;
@@ -42,25 +51,36 @@
      -->
    <script src="lib/jquery.min.js"></script>
    <!-- Latest compiled and minified CSS -->
-   <link href="lib/bootstrap.min.css" rel="stylesheet">
+   <link href="lib/css/bootstrap.min.css" rel="stylesheet">
    <!-- Latest compiled and minified JavaScript -->
-   <script src="lib/tether.min.js"></script>
-   <script src="lib/bootstrap.min.js"></script>
+   <script src="lib/js/popper.min.js"></script>
+   <script src="lib/js/bootstrap.min.js"></script>
 
 </head>
 
 <body>
    <div class="title">
       <h5>Room: <span id="current-number">none</span></h5>
-      <button type="button" class="btn btn-danger btn-sm" id="leave-room">Leave</button>
+      <button type="button" class="btn btn-danger btn-sm" id="leave-room">
+         <img src="lib/icons/ic_clear_white_24px.svg">
+      </button>
+      <button type="button" class="btn btn-warning btn-sm" id="connection-status">
+         <img src="lib/icons/ic_power_white_24px.svg">
+      </button>
    </div>
    <div class="input-group">
       <input type="text" class="form-control" id="room-number" placeholder="Input room number">
       <span class="input-group-btn">
-        <button class="btn btn-secondary" type="button" id="enter-room">Enter</button>
+        <button class="btn btn-secondary btn-info" type="button" id="enter-room">
+           <img src="lib/icons/ic_forward_white_24px.svg">
+           Go
+        </button>
       </span>
    </div>
-   <button type="button" class="btn btn-success" id="tab-room">New tab</button>
+   <button type="button" class="btn btn-success" id="tab-room">
+      <img src="lib/icons/ic_open_in_new_white_24px.svg">
+      New tab
+   </button>
 
    <script src="popup.js"></script>
 </body>
