--- a/Push Text/popup.html
+++ b/Push Text/popup.html
@@ -60,7 +60,7 @@
 
 <body>
    <div class="title">
-      <h5>Room: <span id="current-number">none</span></h5>
+       <h5>Room: <span id="current-number">None</span></h5>
       <button type="button" class="btn btn-danger btn-sm" id="leave-room">
          <img src="lib/icons/ic_clear_white_24px.svg">
       </button>
@@ -77,7 +77,7 @@
         </button>
       </span>
    </div>
-   <button type="button" class="btn btn-success" id="tab-room">
+   <button type="button" class="btn btn-success" id="tab-room" disabled>
       <img src="lib/icons/ic_open_in_new_white_24px.svg">
       New tab
    </button>
