--- a/Push Text/popup.html
+++ b/Push Text/popup.html
@@ -65,8 +65,8 @@
 
 <body>
    <div class="title">
-       <h5>Room: <span id="current-number">None</span></h5>
-      <button type="button" class="btn btn-danger btn-sm" id="leave-room">
+       <h5>Room: <span id="current-number"></span></h5>
+       <button type="button" class="btn btn-danger btn-sm" id="leave-room" hidden>
          <img src="lib/icons/ic_clear_white_24px.svg">
       </button>
       <button type="button" class="btn btn-warning btn-sm" id="connection-status">
