update help page

--- a/Push Text/help.html
+++ b/Push Text/help.html
@@ -29,6 +29,33 @@
         <li>网络缓慢时不要重复点击进入房间或发送图片，该操作会导致后台图片过多，并使加载变慢。</li>
         <li>使用完毕请手动离开房间, 谢谢。</li>
     </ol>
+
+    <br>
+    <br>
+    <h2 class="d-flex justify-content-center" id="使用方法">使用方法</h2>
+
+
+    <h3 id="发送">发送</h3>
+
+    <ol>
+        <li>点击右上方笑脸, 在面板内输入自定义的一个房间号, 然后点击<code>enter</code>进入房间</li>
+        <li>发送时,按快捷键<code>ctrl</code> + <code>alt</code> + <code>z</code></li>
+        <li>发送的内容为鼠标指向的文字内容和当前可见的页面截图.</li>
+    </ol>
+
+
+    <h3 id="接收">接收</h3>
+
+    <ul>
+        <li><p>方法一: 点击右上方笑脸, 点击面板上的<code>new tab</code>打开一个新的标签页, 输入你需要进入的房间号即可.</p></li>
+        <li><p>方法二: 进入下列网址之一:</p>
+
+            <ul>
+                <li><a href="https://wqwz111.github.io/Push-text">Demo 1</a></li>
+                <li><a href="https://dream-c5c23.firebaseapp.com">Demo 2</a></li>
+            </ul>
+        </li>
+    </ul>
 </div>
 <script src="lib/jquery.min.js"></script>
 <script src="lib/js/popper.min.js"></script>
