--- a/Push Text/popup.html
+++ b/Push Text/popup.html
@@ -12,7 +12,7 @@
       body {
          font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
          font-size: 100%;
-         width: 250px;
+          width: 270px;
          padding: 5px;
       }
       .title {
@@ -36,13 +36,16 @@
       .title button {
          vertical-align: baseline;
       }
+
+      #button-group {
+          float: right;
+      }
       button#connection-status {
-         float: right;
+
          margin-left: 5px;
       }
 
       button#user-manual {
-         float: right;
       }
       .input-group {
          clear: both;
@@ -74,12 +77,14 @@
       <button type="button" class="btn btn-danger btn-sm" id="leave-room">
          <img src="lib/icons/ic_clear_white_24px.svg">
       </button>
-      <button type="button" class="btn btn-warning btn-sm" id="connection-status">
-         <img src="lib/icons/ic_power_white_24px.svg">
-      </button>
-      <button type="button" class="btn btn-info btn-sm" id="user-manual">
-         <img src="lib/icons/ic_help_outline_white_24px.svg">
-      </button>
+       <div id="button-group">
+           <button type="button" class="btn btn-warning btn-sm" id="connection-status">
+               <img src="lib/icons/ic_power_white_24px.svg">
+           </button>
+           <button type="button" class="btn btn-info btn-sm" id="user-manual">
+               <img src="lib/icons/ic_help_outline_white_24px.svg">
+           </button>
+       </div>
    </div>
    <div class="input-group">
       <input class="form-control" id="room-number" placeholder="Input Room No.">
