--- a/Push Text/help.html
+++ b/Push Text/help.html
@@ -12,6 +12,7 @@
             color: #fff;
             text-shadow: 0 1px 3px rgba(0, 0, 0, .5);
             padding-top: 80px;
+            padding-bottom: 80px;
         }
     </style>
 
@@ -56,6 +57,12 @@
             </ul>
         </li>
     </ul>
+
+    <h2 class="d-flex justify-content-center" id="更新方式">更新方式</h2>
+
+    <p>
+        请保持该插件为最新版本, 更新请到<a href="https://github.com/wqwz111/Push-text">这里</a>
+    </p>
 </div>
 <script src="lib/jquery.min.js"></script>
 <script src="lib/js/popper.min.js"></script>
