--- a/Push Text/help.html
+++ b/Push Text/help.html
@@ -39,7 +39,7 @@
     <h3 id="发送">发送</h3>
 
     <ol>
-        <li>点击右上方笑脸, 在面板内输入自定义的一个房间号, 然后点击<code>enter</code>进入房间</li>
+        <li>点击右上方笑脸, 在面板内输入自定义的一个房间号, 然后点击<code>Go</code>进入房间</li>
         <li>发送时,按快捷键<code>ctrl</code> + <code>alt</code> + <code>z</code></li>
         <li>发送的内容为鼠标指向的文字内容和当前可见的页面截图.</li>
     </ol>
@@ -48,7 +48,7 @@
     <h3 id="接收">接收</h3>
 
     <ul>
-        <li><p>方法一: 点击右上方笑脸, 点击面板上的<code>new tab</code>打开一个新的标签页, 输入你需要进入的房间号即可.</p></li>
+        <li><p>方法一: 点击右上方笑脸, 点击面板上的<code>New tab</code>打开一个新的标签页, 输入你需要进入的房间号即可.</p></li>
         <li><p>方法二: 进入下列网址之一:</p>
 
             <ul>
